cluster/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graceful
  namespace: default
  labels:
    app: graceful
spec:
  replicas: 3
  selector:
    matchLabels:
      app: graceful
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app: graceful
    spec:
      containers:
        - name: graceful
          image: 129008548655.dkr.ecr.ap-northeast-1.amazonaws.com/spring-graceful-shutdown:reactive-native-0.0.1-SNAPSHOT
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: graceful
  namespace: default
  labels:
    app: graceful
spec:
  selector:
    app: graceful
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
      nodePort: 30080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: graceful
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'
  name: graceful
  namespace: default
  labels:
    app: graceful
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graceful
                port:
                  name: http
